$Id$

1.10.4 --/--/--

omitHeader capability

1.10.3 31/08/2004

Cut/copy to properties now works with comment text

1.10.2 (no version change) 19/08/2004

Doc changes and enabled mailing list info. MD5 checksums on the web page

1.10.2 11/06/2004

<call> params can now take properties or static strings rather than just XPath expressions
Subtargets failure (in targets called by <call>) is propogated through <xmltask>
Filed fileset bug wrt. calling xmltask twice in the same build

Fixed jdk 1.3 incompatibility
1.10.1 18/05/2004

Fixed jdk 1.3 incompatibility

1.10  11/04/2004

<fileset> capability implemented

1.9.2 18/03/2004

clearBuffers now works for multiple files. ie. buffers
are cleared _prior_ to processing the file set

1.9.1 06/03/2004

Added build capability for jdk 1.5
Added Amazon references

1.9   31/12/2003

Tested against ant 1.6
call subtarget implemented
xmltask can now use a buffer as an input source

1.8.2 14/12/2003

Now handles multiple inputs with no output file/dir
Warns when copying non-text nodes to properties
clearBuffers direective

1.8.1 26/11/2003

Doc upgrade
Private external DTD outputter fix - both standard and simple outputter
Fix for node selections with results other than node iterators

1.8 09/11/2003

Modified/simplified boolean setters on XmlTask
Tested against Ant 1.6b
Logging levels now VERBOSE rather than INFO

1.8a 22/09/2003

Added copying/cutting to properties

1.7 06/09/2003
properties file included in source distribution
build.xml fixes for source distribution

1.7b 17/08/2003
setSource() fix for use with <script> tasks
Source/absolute path fix
preserveType fix and blank DOCTYPE fixes. 
Logging now performed via the Ant logging framework
1.7 release due to large changes internally and transfer to Sourceforge.net CVS

1.6.5 20/07/2003

Added the 'failWithoutMatch' attribute

1.6.4 25/06/2003

Bug fix related to blank PUBLIC/SYSTEM ids and 'preserveType'

1.6.3 24/06/2003

Now reports version number whilst running
