@@ -1,0 +1,5 @@
+<a>
+  <b>
+    <!--comment text-->
+  </b>
+</a>
