@@ -3,6 +3,7 @@ $Id$
 1.10.4 --/--/--
 
 omitHeader capability
+standalone header capability
 
 1.10.3 31/08/2004
 
